2007-07-10  Ben Motmans <ben.motmans@gmail.com>

	* DataGrid/*: moved DataGrid control to Components project
	* QueryService.cs: helper service for easy database access
	* SqlQueryView.cs: View to execute SQL queries

2007-07-05  Ben Motmans <ben.motmans@gmail.com>

	* DataGrid/*: new DataGrid implementation based on Gtk.TreeView, support for record navigation,
	data visualizers and different column types
	* QueryResultView.cs: View to visualize the result of a query, based on the new DataGrid