@@ -38,7 +38,7 @@
 	</Extension>
 	
 	<Extension path = "/SharpDevelop/Workbench/MainMenu/Tools">
-		<SeparatorItem id = "DatabaseSeparator" />
+		<SeparatorItem id = "DatabaseSeparator" insertafter = "MonoDevelop.Ide.Commands.ToolCommands.AddinManager" />
 		<ItemSet id = "Database" _label = "_Database">
 			<CommandItem id = "MonoDevelop.Database.Query.ToolCommands.GenerateDatabaseLayer" />
 			<CommandItem id = "MonoDevelop.Database.Query.ToolCommands.GenerateObjectLayer" />
@@ -48,45 +48,27 @@
 	</Extension>
 	
 	<Extension path = "/SharpDevelop/Workbench/StockIcons">
-		<StockIcon stockid = "md-db-column-add" resource = "Icons.16x16.Database.Column.Add.png" />
 		<StockIcon stockid = "md-db-column-key" resource = "Icons.16x16.Database.Column.Key.png" />
 		<StockIcon stockid = "md-db-column" resource = "Icons.16x16.Database.Column.png" />
-		<StockIcon stockid = "md-db-column-remove" resource = "Icons.16x16.Database.Column.Remove.png" />
-		<StockIcon stockid = "md-db-connection-add" resource = "Icons.16x16.Database.Connection.Add.png" />
-		<StockIcon stockid = "md-db-connection-edit" resource = "Icons.16x16.Database.Connection.Edit.png" />
 		<StockIcon stockid = "md-db-connection-error" resource = "Icons.16x16.Database.Connection.Error.png" />
 		<StockIcon stockid = "md-db-connection" resource = "Icons.16x16.Database.Connection.png" />
-		<StockIcon stockid = "md-db-connection-remove" resource = "Icons.16x16.Database.Connection.Remove.png" />
 		<StockIcon stockid = "md-db-constraints" resource = "Icons.16x16.Database.Constraints.png" />
 		<StockIcon stockid = "md-db-database-error" resource = "Icons.16x16.Database.Database.Error.png" />
 		<StockIcon stockid = "md-db-database-ok" resource = "Icons.16x16.Database.Database.Ok.png" />
 		<StockIcon stockid = "md-db-database" resource = "Icons.16x16.Database.Database.png" />
 		<StockIcon stockid = "md-db-execute" resource = "Icons.16x16.Database.Execute.png" />
 		<StockIcon stockid = "md-db-parameter" resource = "Icons.16x16.Database.Parameter.png" />
-		<StockIcon stockid = "md-db-procedure-add" resource = "Icons.16x16.Database.Procedure.Add.png" />
-		<StockIcon stockid = "md-db-procedure-edit" resource = "Icons.16x16.Database.Procedure.Edit.png" />
 		<StockIcon stockid = "md-db-procedure-error" resource = "Icons.16x16.Database.Procedure.Error.png" />
 		<StockIcon stockid = "md-db-procedure" resource = "Icons.16x16.Database.Procedure.png" />
-		<StockIcon stockid = "md-db-procedure-remove" resource = "Icons.16x16.Database.Procedure.Remove.png" />
 		<StockIcon stockid = "md-db-procedure-source" resource = "Icons.16x16.Database.Procedure.Source.png" />
 		<StockIcon stockid = "md-db-relations" resource = "Icons.16x16.Database.Relations.png" />
-		<StockIcon stockid = "md-db-table-add" resource = "Icons.16x16.Database.Table.Add.png" />
-		<StockIcon stockid = "md-db-table-edit" resource = "Icons.16x16.Database.Table.Edit.png" />
 		<StockIcon stockid = "md-db-table-error" resource = "Icons.16x16.Database.Table.Error.png" />
 		<StockIcon stockid = "md-db-table" resource = "Icons.16x16.Database.Table.png" />
-		<StockIcon stockid = "md-db-table-refresh" resource = "Icons.16x16.Database.Table.Refresh.png" />
-		<StockIcon stockid = "md-db-table-remove" resource = "Icons.16x16.Database.Table.Remove.png" />
 		<StockIcon stockid = "md-db-tables" resource = "Icons.16x16.Database.Tables.png" />
-		<StockIcon stockid = "md-db-user-add" resource = "Icons.16x16.Database.User.Add.png" />
-		<StockIcon stockid = "md-db-user-edit" resource = "Icons.16x16.Database.User.Edit.png" />
 		<StockIcon stockid = "md-db-user" resource = "Icons.16x16.Database.User.png" />
-		<StockIcon stockid = "md-db-user-remove" resource = "Icons.16x16.Database.User.Remove.png" />
 		<StockIcon stockid = "md-db-users" resource = "Icons.16x16.Database.Users.png" />
-		<StockIcon stockid = "md-db-view-add" resource = "Icons.16x16.Database.View.Add.png" />
-		<StockIcon stockid = "md-db-view-edit" resource = "Icons.16x16.Database.View.Edit.png" />
 		<StockIcon stockid = "md-db-view-error" resource = "Icons.16x16.Database.View.Error.png" />
 		<StockIcon stockid = "md-db-view" resource = "Icons.16x16.Database.View.png" />
-		<StockIcon stockid = "md-db-view-remove" resource = "Icons.16x16.Database.View.Remove.png" />
 		<StockIcon stockid = "md-db-view-source" resource = "Icons.16x16.Database.View.Source.png" />
 		<StockIcon stockid = "md-db-views" resource = "Icons.16x16.Database.Views.png" />
 	</Extension>
