@@ -18,12 +18,8 @@
     <File name="./Codons" subtype="Directory" buildaction="Compile" />
     <File name="./QueryResultView.cs" subtype="Code" buildaction="Compile" />
     <File name="./SqlQueryView.cs" subtype="Code" buildaction="Compile" />
-    <File name="./icons/Icons.16x16.Database.Column.Add.png" subtype="Code" buildaction="EmbedAsResource" />
     <File name="./icons/Icons.16x16.Database.Column.Key.png" subtype="Code" buildaction="EmbedAsResource" />
     <File name="./icons/Icons.16x16.Database.Column.png" subtype="Code" buildaction="EmbedAsResource" />
-    <File name="./icons/Icons.16x16.Database.Column.Remove.png" subtype="Code" buildaction="EmbedAsResource" />
-    <File name="./icons/Icons.16x16.Database.Connection.Add.png" subtype="Code" buildaction="EmbedAsResource" />
-    <File name="./icons/Icons.16x16.Database.Connection.Edit.png" subtype="Code" buildaction="EmbedAsResource" />
     <File name="./icons/Icons.16x16.Database.Connection.Error.png" subtype="Code" buildaction="EmbedAsResource" />
     <File name="./icons/Icons.16x16.Database.Connection.png" subtype="Code" buildaction="EmbedAsResource" />
     <File name="./icons/Icons.16x16.Database.Connection.Remove.png" subtype="Code" buildaction="EmbedAsResource" />
@@ -33,30 +29,17 @@
     <File name="./icons/Icons.16x16.Database.Database.png" subtype="Code" buildaction="EmbedAsResource" />
     <File name="./icons/Icons.16x16.Database.Execute.png" subtype="Code" buildaction="EmbedAsResource" />
     <File name="./icons/Icons.16x16.Database.Parameter.png" subtype="Code" buildaction="EmbedAsResource" />
-    <File name="./icons/Icons.16x16.Database.Procedure.Add.png" subtype="Code" buildaction="EmbedAsResource" />
-    <File name="./icons/Icons.16x16.Database.Procedure.Edit.png" subtype="Code" buildaction="EmbedAsResource" />
     <File name="./icons/Icons.16x16.Database.Procedure.Error.png" subtype="Code" buildaction="EmbedAsResource" />
     <File name="./icons/Icons.16x16.Database.Procedure.png" subtype="Code" buildaction="EmbedAsResource" />
-    <File name="./icons/Icons.16x16.Database.Procedure.Remove.png" subtype="Code" buildaction="EmbedAsResource" />
     <File name="./icons/Icons.16x16.Database.Procedure.Source.png" subtype="Code" buildaction="EmbedAsResource" />
     <File name="./icons/Icons.16x16.Database.Relations.png" subtype="Code" buildaction="EmbedAsResource" />
-    <File name="./icons/Icons.16x16.Database.Table.Add.png" subtype="Code" buildaction="EmbedAsResource" />
-    <File name="./icons/Icons.16x16.Database.Table.Edit.png" subtype="Code" buildaction="EmbedAsResource" />
     <File name="./icons/Icons.16x16.Database.Table.Error.png" subtype="Code" buildaction="EmbedAsResource" />
     <File name="./icons/Icons.16x16.Database.Table.png" subtype="Code" buildaction="EmbedAsResource" />
-    <File name="./icons/Icons.16x16.Database.Table.Refresh.png" subtype="Code" buildaction="EmbedAsResource" />
-    <File name="./icons/Icons.16x16.Database.Table.Remove.png" subtype="Code" buildaction="EmbedAsResource" />
     <File name="./icons/Icons.16x16.Database.Tables.png" subtype="Code" buildaction="EmbedAsResource" />
-    <File name="./icons/Icons.16x16.Database.User.Add.png" subtype="Code" buildaction="EmbedAsResource" />
-    <File name="./icons/Icons.16x16.Database.User.Edit.png" subtype="Code" buildaction="EmbedAsResource" />
     <File name="./icons/Icons.16x16.Database.User.png" subtype="Code" buildaction="EmbedAsResource" />
-    <File name="./icons/Icons.16x16.Database.User.Remove.png" subtype="Code" buildaction="EmbedAsResource" />
     <File name="./icons/Icons.16x16.Database.Users.png" subtype="Code" buildaction="EmbedAsResource" />
-    <File name="./icons/Icons.16x16.Database.View.Add.png" subtype="Code" buildaction="EmbedAsResource" />
-    <File name="./icons/Icons.16x16.Database.View.Edit.png" subtype="Code" buildaction="EmbedAsResource" />
     <File name="./icons/Icons.16x16.Database.View.Error.png" subtype="Code" buildaction="EmbedAsResource" />
     <File name="./icons/Icons.16x16.Database.View.png" subtype="Code" buildaction="EmbedAsResource" />
-    <File name="./icons/Icons.16x16.Database.View.Remove.png" subtype="Code" buildaction="EmbedAsResource" />
     <File name="./icons/Icons.16x16.Database.View.Source.png" subtype="Code" buildaction="EmbedAsResource" />
     <File name="./icons/Icons.16x16.Database.Views.png" subtype="Code" buildaction="EmbedAsResource" />
     <File name="./Commands" subtype="Directory" buildaction="Compile" />
